--- a/package.json
+++ b/package.json
@@ -4,29 +4,28 @@
     "description": "Tienda de ropa con un catálogo de productos y un admin para el administrador. Los productos se guardan en una base de datos de mongo en Atlas. La tienda se puede visualizar como HTML o como JSON",
     "main": "index.js",
     "directories": {
-      "test": "test"
+        "test": "test"
     },
     "scripts": {
-      "test": "jest",
-      "start": "node --watch src/index.js",
-      "dev": "nodemon src/index.js"
+        "test": "jest",
+        "start": "node --watch src/index.js",
+        "dev": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "bcrypt": "5.1.1",
-      "dotenv": "16.4.5",
-      "express": "4.18.2",
-      "express-session": "1.18.0",
-      "firebase": "10.8.1",
-      "method-override": "3.0.0",
-      "mongoose": "8.2.0",
-      "swagger-ui-express": "5.0.0"
+        "bcrypt": "5.1.1",
+        "dotenv": "16.4.5",
+        "express": "^4.19.2",
+        "express-session": "1.18.0",
+        "firebase": "^10.11.0",
+        "method-override": "3.0.0",
+        "mongoose": "8.2.0",
+        "swagger-ui-express": "5.0.0"
     },
     "devDependencies": {
-      "jest": "29.7.0",
-      "nodemon": "3.1.0"
+        "jest": "29.7.0",
+        "nodemon": "3.1.0"
     }
-  }
-  
+}
