--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.11.0",
     "method-override": "3.0.0",
     "mongoose": "8.3.2",
+    "sharp": "^0.33.4",
     "swagger-ui-express": "5.0.0"
   },
   "devDependencies": {
